trunk/Archive2/4f/aa8e87d8777d08/output
main.cpp: In instantiation of 'void stacktrace() [with T = const int&; U = const int; V = int]':
main.cpp:16:28:   required from here
main.cpp:11:5: error: static assertion failed: ...
     static_assert(std::is_same<U, int>::value, "..."); // wtf?
     ^
